jboot v2.0-rc.7:
修复：Aop 自动注入的一些问题，提升 Aop 性能
修复：修复 jboot.properties 无法读取mode文件扩展的问题
优化：当未配置端口号（undertow.port）的时候，默认端口号为：8080


jboot v2.0-rc.6:
优化：把 JbootModel 的 `getIdValue()` 修改为 `_getIdValue()`，防止fastjson自动序列化会调用 get 方法出错的问题
修复：JbootModel 通过 RPC 请求数据返回客户端，然后进行 equals 会出错的问题


jboot v2.0-rc.4:
新增：注解可以通过${key}来指定读取配置的功能，支持 ${key:value} 的方式设置默认值
新增：@Inject 对配置 Model 自动注入的支持，配置 Model 应该是通过 ConfigManager 来进行初始化
新增：@ConfigInject 可以通过 @ConfigInject(key:value) 的方式进行配置，当key不存在的时候，自动使用value进行赋值
新增：onJFinalStartedBefore() 监听，可以在项目启动的时候做一些必须的初始化
新增：JbootActionHandler 新增 getAction() 方法，方便子类复写从而可以实现 "动态路由" 和 Controler 的动态添加功能
新增：工具类 FileScanner，用于对文件进行扫描和监听文件动态
新增：JbootResourceLoader，用于在 Maven 多 Module 的情况下自动对资源文件进行热加载
新增：JFinalHandlers 添加 getHandlers() 和 setActionHandler() 方法
新增：Columns 新增 or() 方法的支持，用于添加 Sql 的 OR 逻辑
新增：新增工具类 WeightUtil 用于对默认 监听器进行排序
新增：jboot.app.scanner 配置，用于对 jboot 类扫描器进行配置
优化：升级 JFinal 到 3.6 最新版本
优化：升级 JFinal-Undertow 到 1.5 最新版本
优化：升级 JFinal-Weixin 到 2.3 最新版本
优化：修改 JbootAppListener 的 onJfinalStarted() 为 onJfinalStart() ，保持和JFinal 3.6 一致
优化：save() 和 saveOrUpdate() 方法返回 Object，Object 是 Model 的主键值，方便 RPC 调用
优化：增强 SPI 功能，当未在 META-INF 定义 Service 接口的时候，可以进行 SPI 发现
优化：优化通过 Column 和 Columns 查询的时候，生成 Sql 的代码逻辑，增强性能
优化：JbootHttpKit 重命名为 HttpUtil、新增 handle() 方法，方便自定义任何的 Http 请求
优化：重命名代码生成器的模板文件，以 .tp 结尾
优化：修改资源文件路径，默认为 classPath 下的 webapp，方便多 maven module 进行热加载
优化：修改 JbootPaginateDirective 分页指令为 非抽象类，有默认设置，支持复写
优化：删除 @EventConfig 的 weight 属性，统一用 @Weight 来处理
修复: HttpUtil.downlaod() 返回内容错误的问题
修复：Swagger下载不同版本的资源文件可能导致替换url不正确的问题
修复：Swagger配置contextPath的情况下无法正确访问的问题
修复：开发模式下进行热加载的时候，会导致定时任务多次执行的问题


jboot v2.0-rc.3:
新增：JbootCache模块的空实现 NoneCacheImpl，方便通过配置关闭缓存功能
新增：Jboot 代码生成器添加排除表和移除前缀的支持
优化：当未对 RPC 模块进行配置的情况下，该功能默认关闭，不会启用dubbo等 RPC 组件
优化：更新相关依赖


jboot v2.0-rc.2:
移除 javax 的 @Inject 功能
移除 jboot.app.hotSwapClassPrefix 的配置，直接使用 undertow.hotSwapClassPrefix 配置即可
修复 代码生成器生成的代码带有 @Singleton 注解的问题
优化 @RPCInject 中的 async 和 check 的类型
优化 ClassScanner 会扫描到 JRE 的 Class 导致加载速度慢的问题
